--- a/NekaiManager/Components/Pages/HomePage.razor
+++ b/NekaiManager/Components/Pages/HomePage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using NekaiManager.Components.Components
 
 <PageTitle>Home</PageTitle>
 
@@ -6,32 +7,15 @@
     <MudCardContent>
         <MudStack>
             <MudStack Row AlignItems="AlignItems.Stretch">
-                <MudNavLink Href="/Logs">
-                    <MudPaper Elevation="3">
-                        <MudStack AlignItems="AlignItems.Center" Class="py-3">
-                            <MudIcon Icon="@Icons.Material.Filled.TableRows" Size="Size.Large"></MudIcon>
-                            <MudText>Logs</MudText>
-                        </MudStack>
-                    </MudPaper>
-                </MudNavLink>
-
-                <MudNavLink Href="/">
-                    <MudPaper Elevation="3">
-                        <MudStack AlignItems="AlignItems.Center" Class="py-3">
-                            <MudIcon Icon="@Icons.Material.Filled.Home" Size="Size.Large"></MudIcon>
-                            <MudText>Home</MudText>
-                        </MudStack>
-                    </MudPaper>
-                </MudNavLink>
-
-                <MudNavLink Href="/Settings">
-                    <MudPaper Elevation="3">
-                        <MudStack AlignItems="AlignItems.Center" Class="py-3">
-                            <MudIcon Icon="@Icons.Material.Filled.Settings" Size="Size.Large"></MudIcon>
-                            <MudText>Settings</MudText>
-                        </MudStack>
-                    </MudPaper>
-                </MudNavLink>
+                <HomeNavLink Href="/Logs" Icon="@Icons.Material.Filled.TableRows">
+                    Logs
+                </HomeNavLink>
+                <HomeNavLink Href="/" Icon="@Icons.Material.Filled.Home">
+                    Home
+                </HomeNavLink>
+                <HomeNavLink Href="/Settings" Icon="@Icons.Material.Filled.Settings">
+                    Settings
+                </HomeNavLink>
             </MudStack>
         </MudStack>
     </MudCardContent>
